@@ -3,7 +3,6 @@ package forge.download;
 import static forge.localinstance.properties.ForgeConstants.GITHUB_SNAPSHOT_URL;
 import static forge.localinstance.properties.ForgeConstants.RELEASE_URL;
 
-import com.google.common.collect.ImmutableList;
 import forge.gui.FThreads;
 import forge.gui.GuiBase;
 import forge.gui.download.GuiDownloadZipService;
@@ -103,7 +102,7 @@ public class AutoUpdater {
         } else if (updateChannel.equals("none")) {
             System.out.println("DEBUG: Update channel not set - asking user");
             String message = localizer.getMessage("lblYouHaventSetUpdateChannel");
-            List<String> options = ImmutableList.of(localizer.getMessageorUseDefault("lblCancel", "Cancel"), localizer.getMessageorUseDefault("lblRelease", "Release"), localizer.getMessageorUseDefault("lblSnapshot", "Snapshot"));
+            List<String> options = List.of(localizer.getMessageorUseDefault("lblCancel", "Cancel"), localizer.getMessageorUseDefault("lblRelease", "Release"), localizer.getMessageorUseDefault("lblSnapshot", "Snapshot"));
             int option = SOptionPane.showOptionDialog(message, localizer.getMessage("lblManualCheck"), null, options, 0);
             if (option < 1) {
                 System.out.println("DEBUG: User cancelled channel selection");
@@ -227,12 +226,12 @@ public class AutoUpdater {
             } else {
                 message = "Update files not found.\n\n" + e.getMessage();
             }
-            SOptionPane.showOptionDialog(message, localizer.getMessage("lblError"), null, ImmutableList.of("Ok"));
+            SOptionPane.showOptionDialog(message, localizer.getMessage("lblError"), null, List.of("Ok"));
             return false;
         } catch (Exception e) {
             System.err.println("ERROR: Exception during version check: " + e.getMessage());
             e.printStackTrace();
-            SOptionPane.showOptionDialog(e.getMessage(), localizer.getMessage("lblError"), null, ImmutableList.of("Ok"));
+            SOptionPane.showOptionDialog(e.getMessage(), localizer.getMessage("lblError"), null, List.of("Ok"));
             return false;
         }
     }
@@ -274,7 +273,7 @@ public class AutoUpdater {
         String v = snapsBuildDate.isEmpty() ? version : version + TextUtil.enclosedParen(snapsBuildDate);
         String b = buildDate.isEmpty() ? buildVersion : buildVersion + TextUtil.enclosedParen(buildDate);
         String message = localizer.getMessage("lblNewVersionForgeAvailableUpdateConfirm", v, b) + logs;
-        final List<String> options = ImmutableList.of(localizer.getMessage("lblUpdateNow"), localizer.getMessage("lblUpdateLater"));
+        final List<String> options = List.of(localizer.getMessage("lblUpdateNow"), localizer.getMessage("lblUpdateLater"));
         if (SOptionPane.showOptionDialog(message, localizer.getMessage("lblNewVersionAvailable"), null, options, 0) == 0) {
             return downloadFromForge();
         }
@@ -334,7 +333,7 @@ public class AutoUpdater {
         return false;
     }
     private void restartAndUpdate(String packagePath) {
-        if (SOptionPane.showOptionDialog(localizer.getMessage("lblForgeUpdateMessage", packagePath), localizer.getMessage("lblRestart"), null, ImmutableList.of(localizer.getMessage("lblOK")), 0) == 0) {
+        if (SOptionPane.showOptionDialog(localizer.getMessage("lblForgeUpdateMessage", packagePath), localizer.getMessage("lblRestart"), null, List.of(localizer.getMessage("lblOK")), 0) == 0) {
             try {
                 File installer = new File(packagePath);
                 if (installer.exists() && packagePath.endsWith(".jar")) {
